--- a/index.html
+++ b/index.html
@@ -7,11 +7,101 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="css/main.css">
 
-    <title>Hello, world!</title>
+    <title>Guia Hoteles</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron">
+      <h1>Hoteles</h1>
+    </div>
+    <div class="container"> 
+      <div  class="row">
+        <div class="col-sm-4"> 
+            <p>
+              <h3>Como funciona?</h3>
+              <p>Busca los hoteles de acuerdo a tu preferencia.</p>
+            </p>
+        </div>
+        <div class="col-sm-4">
+          <p>
+          <h3>Donde puedo reservar?</h3>
+          <p>Elige la ciudad que te interese y luego realiza la reserva con tus datos</p>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <p>
+          <h3>Como pago?</h3>
+          <p>Utiliza tu tarjeta favorita</p>
+          </p>
+        </div>
+      </div>
+    <hr>
+    <div class="d-flex flex-wrap flex-row-reverse">
+      <div class="card-hotel  d-flex flex-column justify-content-between">
+        <h4>Hotel Barcelona</h4>
+        <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+      </div>
+      <div>
+        <button class="btn btn-primary btn-reserva">Reservar</button>
+      </div>
+            <div class="card-hotel d-flex flex-column justify-content-between">
+              <h4>Hotel Lima</h4>
+              <p>Hotel ubicado en pleno centro de lima</p>
+            </div>
+              <div>
+              <button class="btn btn-primary btn-reserva">Reservar</button>
+            </div>
+                  <div class="card-hotel  d-flex flex-column justify-content-between ">
+                    <h4>Hotel La Paz</h4>
+                    <p>Hotel ubicado en pleno centro</p>
+                  </div>
+                  <div>
+                    <button class="btn btn-primary btn-reserva">Reservar</button>
+                  </div>
+                        <div class="card-hotel  d-flex flex-column justify-content-between">
+                          <h4>Hotel Madrid</h4>
+                          <p>Hotel ubicado en pleno centro</p>
+                        </div>
+                        <div
+                          <button class="btn btn-primary btn-reserva">Reservar</button>
+                        </div>
+                        <div class="card-hotel  d-flex flex-column justify-content-between">
+                          <h4>Hotel San Pablo</h4>
+                          <p>Hotel ubicado en pleno centro</p>
+                        </div>
+                        <div>
+                          <button class="btn btn-primary btn-reserva">Reservar</button>
+                        </div>
+</div>
+</div>
+<footer>
+  <div class="row">
+    <div class="col-sm-4 d-flex flex-column">
+      <a href="http://wwww.facebook.com">Facebook</a>
+      <a href="http://wwww.twitter.com">Twitter</a>
+      <a href="http://wwww.instagram.com">Instagram</a>
+      <a href="http://wwww.google.com">Google</a>
+    </div>
+    <div class="col-sm-4">
+      <address>
+        <h3>Oficina Central</h3>
+        <p>Bogota,Colombia</p>
+        <p>+57301897653</p>
+        <p>contactocolombia@gmail.com</p>
+      </address>
+    </div>
+
+    <div class="col-sm-4 d-flex align-items-end">
+      <a href="http://wwww.facebook.com"> Nosotros</a>
+      <a href="http://wwww.twitter.com">Precios</a>
+      <a href="http://wwww.instagram.com">Terminos y condiciones</a>
+      <a href="http://wwww.google.com">Contacto</a>
+
+    </div>
+  </div>
+</footer>
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
