--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> 
     <link rel="stylesheet" href="css/main.css">
 
-    <title>Guia Hoteles</title>
+    <title >        Guia Hoteles</title>
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Hoteles</h1>
+      <h1 class="text-center">Hoteles</h1>
     </div>
     <div class="container"> 
       <div  class="row">
@@ -63,7 +63,7 @@
                           <h4>Hotel Madrid</h4>
                           <p>Hotel ubicado en pleno centro</p>
                         </div>
-                        <div
+                        <div>
                           <button class="btn btn-primary btn-reserva">Reservar</button>
                         </div>
                         <div class="card-hotel  d-flex flex-column justify-content-between">
@@ -78,25 +78,27 @@
 <footer>
   <div class="row">
     <div class="col-sm-4 d-flex flex-column">
-      <a href="http://wwww.facebook.com">Facebook</a>
-      <a href="http://wwww.twitter.com">Twitter</a>
-      <a href="http://wwww.instagram.com">Instagram</a>
-      <a href="http://wwww.google.com">Google</a>
+      <a href="http://www.facebook.com">Facebook</a>
+      <a href="http://www.twitter.com">Twitter</a>
+      <a href="http://www.instagram.com">Instagram</a>
+      <a href="http://www.google.com">Google</a>
     </div>
-    <div class="col-sm-4">
+   
+    <div class="col-sm-4 d-flex float-left ">
       <address>
         <h3>Oficina Central</h3>
         <p>Bogota,Colombia</p>
         <p>+57301897653</p>
         <p>contactocolombia@gmail.com</p>
       </address>
+    
     </div>
 
     <div class="col-sm-4 d-flex align-items-end">
-      <a href="http://wwww.facebook.com"> Nosotros</a>
-      <a href="http://wwww.twitter.com">Precios</a>
-      <a href="http://wwww.instagram.com">Terminos y condiciones</a>
-      <a href="http://wwww.google.com">Contacto</a>
+      <a href="http://www.facebook.com"> Nosotros </a>
+      <a href="http://www.twitter.com"> Precios </a>
+      <a href="http://www.instagram.com"> Terminos y condiciones </a>
+      <a href="http://www.google.com"> Contacto </a>
 
     </div>
   </div>
