--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> 
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title >Guia Hoteles</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
             <li class="nav-item"> <a class="nav-link" href="./about.html">Nosotros</a></li>
             <li class="nav-item"> <a class="nav-link" href="#">Precios</a></li>
             <li class="nav-item"> <a class="nav-link" href="#">Terminos y Condiciones</a></li>
-            <li class="nav-item"> <a class="nav-link" href="#">Contacto</a></li>
+            <li class="nav-item"> <a class="nav-link" href="./contacto.html">Contacto</a></li>
           </ul>
         </div>
     </nav>
@@ -121,9 +121,9 @@
     <div class="col-sm-4 ">
       <address>
         <h3>Oficina Central</h3>
-        <p>Bogota,Colombia</p>
-        <p>+57301897653</p>
-        <p>contactocolombia@gmail.com</p>
+        <p><span class="oi oi-home footer-address-icon"></span>Bogota,Colombia</p>
+        <p><span class="oi oi-phone footer-address-icon"></span> +57301897653</p>
+        <p><span class="oi oi-inbox footer-address-icon"></span>contactocolombia@gmail.com</p>
       </address>
     
     </div>
