--- a/contacto.html
+++ b/contacto.html
@@ -38,12 +38,52 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+          <li class="breadcrumb-item active" aria-current="page">Contacto</li>
         </ol>
       </nav>
-      <span>
-        Nosotros somos una empresa que permite buscar la mejor opcion de oferta de hoteles.
-      </span>
+      <h1>Dejame tu comentario</h1>
+      <form>
+        <div class="form-row"> 
+          <div class="form-group col-sm-6">
+            <label for="nombre">Nombre</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="apellido">Apellido</label>
+            <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
+          </div>
+        </div>
+          <div class="form-group ">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" id="email" placeholder="Ingrese su email">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-sm-9">
+              <label for="domicilio">Domicilio</label>
+              <input type="text" class="form-control" id="domicilio" placeholder="Ingrese su domicilio">
+            </div>
+            <div class="form-group col-sm-3">
+              <label for="provincia">Provincia</label>
+              <select id="provincia" class="form-control">
+                <option selected>Capital Federal</option>
+                <option>Buenos Aires</option>
+                <option>Cordoba</option>
+                <option>Santa Fe</option>
+              </select>
+            </div>
+        </div>
+        <div class="form-group">
+          <label for="comentario">Comentario</label>
+          <textarea id="comentario" class="form-control" rows="10"></textarea>
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">Quiero que me contacten</label>
+          </div>
+        </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>   
+      </form>
 </div>
 <footer>
   <div class="row">
