entrega final de la semana 3 - pills,collapse,accordion,popover,modal,carrousel

--- a/contacto.html
+++ b/contacto.html
@@ -40,6 +40,7 @@
   <div class="mt-5 py-5" style="background-color: #e9ecef;">
     <h1 class="text-center">Hoteles en Colombia</h1>
   </div>
+  </div>
   <div class="container mt-4">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
