--- a/precios.html
+++ b/precios.html
@@ -42,64 +42,127 @@
           <li class="breadcrumb-item active" aria-current="page">Precios</li>
         </ol>
       </nav>
-      <div class="table-responsive">
-     <table class="table table-striped">
-       <thead class="thead-dark"> 
-         <th>Calidad</th>
-         <th>Bogota</th>
-         <th>Cartagena</th>
-         <th>Santa Marta</th>
-       </thead>
-       <tbody>
-         <tr>
-           <td >1 Estrella  <span class="oi oi-star"></span></td>
-            <td>$110</td>
-            <td>$120</td>
-            <td>$150</td>
-         </tr>
-         <tr>
-            <td>2 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-            <td>$210</td>
-            <td>$220</td>
-            <td>$250</td>
-         </tr>
-          <tr>
-            <td>3 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-            <td>$310</td>
-            <td>$320</td>
-            <td>$350</td>
-          </tr>
-          <tr>
-            <td>4 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-            <td>$410</td>
-            <td>$420</td>
-            <td>$450</td>
-          </tr>
-          <tr>
-            <td>5 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-            <td>$510</td>
-            <td>$520</td>
-            <td>$550</td>
-          </tr>
-       </tbody>
-     </table>
-    </div>
-    <div class="d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-       
-        <div class="card-header">
-          <thead class="thead-dark">
-          Tarjetas Aceptadas
-          </thead>
+
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="compara-tab" data-toggle="tab" href="#compara" role="tab" aria-controls="compara" aria-selected="true">Compara</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="tarjetas-tab" data-toggle="tab" href="#tarjetas" role="tab" aria-controls="tarjetas"
+            aria-selected="false">Tarjetas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " id="comentarios-tab" data-toggle="tab" href="#comentarios" role="tab" aria-controls="comentarios"
+            aria-selected="false">Comentarios</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="compara" role="tabpanel" aria-labelledby="compara-tab">
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead class="thead-dark">
+                <th>Calidad</th>
+                <th>Bogota</th>
+                <th>Cartagena</th>
+                <th>Santa Marta</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1 Estrella <span class="oi oi-star"></span></td>
+                  <td>$110</td>
+                  <td>$120</td>
+                  <td>$150</td>
+                </tr>
+                <tr>
+                  <td>2 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+                  <td>$210</td>
+                  <td>$220</td>
+                  <td>$250</td>
+                </tr>
+                <tr>
+                  <td>3 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span>
+                  </td>
+                  <td>$310</td>
+                  <td>$320</td>
+                  <td>$350</td>
+                </tr>
+                <tr>
+                  <td>4 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span><span
+                      class="oi oi-star"></span><span class="oi oi-star"></span></td>
+                  <td>$410</td>
+                  <td>$420</td>
+                  <td>$450</td>
+                </tr>
+                <tr>
+                  <td>5 Estrellas <span class="oi oi-star"></span><span class="oi oi-star"></span><span
+                      class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+                  <td>$510</td>
+                  <td>$520</td>
+                  <td>$550</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
         </div>
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">Tarjeta basica</li>
-        <li class="list-group-item">Tarjeta Credito</li>
-        <li class="list-group-item">Tarjeta Debito</li>
-        </ul>
+        
+
+
+    <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+      <div class="accordion" id="accordionTarjetas">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseBasica" aria-expanded="true" aria-controls="collapseBasica">
+                Tarjeta Basica
+              </button>
+            </h5>
+          </div>
+          <div id="collapseBasica" class="collapse" aria-labelledby="headingOne" data-parent="#accordionTarjetas">
+            <div class="card-body">
+              Puedes reservar en 3 cuotas sin interes.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseVIP"
+                aria-expanded="false" aria-controls="collapseVIP">
+                Tarjeta VIP
+              </button>
+            </h5>
+          </div>
+          <div id="collapseVIP" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionTarjetas">
+            <div class="card-body">
+              Puedes reservar en 6 cuotas sin interes.
+              Al llegar, recibiras una canasta con obsequios.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link " type="button" data-toggle="collapse" data-target="#collapseBlack"
+                aria-expanded="false" aria-controls="collapseBlack">
+                Tarjeta Black
+              </button>
+            </h5>
+          </div>
+          <div id="collapseBlack" class="collapse" aria-labelledby="headingThree" data-parent="#accordionTarjetas">
+            <div class="card-body">
+              Puedes reservar a 12 cuotas sin interes.
+              Con acceso todos los dias al gimnasio y spa del hotel.
+            </div>
+          </div>
+        </div>
+
+
       </div>
-    </div>
- 
+      </div>
+
+<div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">Comentarios</div>
+</div>
 </div>
 <footer>
   <div class="row">
