--- a/precios.html
+++ b/precios.html
@@ -201,6 +201,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
     <!-- endbuild -->
   </body>
 </html>
